safari overflow issue

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
 
 html {
     background: #000d1a;
+    overflow: hidden;
+    overflow-y: auto;
 }
 
 body {
